# CppTemplate

./: CMakeLists.txt  README.MD  conanfile.txt
cmake/: AddTarget.cmake  CppGlobalConfig.cmake  InstallConanPackages.cmake
src/: CMakeLists.txt
